--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,6 +541,14 @@ section .container {
   background: rgba(255, 255, 255, 0.12);
 }
 
+
+i.bx-menu.bx {
+    font-size: 2rem;
+}
+
+i.bx.bx-x {
+    font-size: 2rem;
+}
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
@@ -967,8 +975,10 @@ section .container {
 }
 
 .contact .info-box .social-links {
-  margin: 5px 0 0 68px;
+  margin: 28px 0 0 0px;
   display: flex;
+  flex-flow: wrap;
+  align-content: space-around;
 }
 
 .contact .info-box .social-links a {
