--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -961,7 +961,7 @@ i.bx.bx-x {
 
 .contact .info-box i.bx:hover{
   background: #fbbb2e;
-  color: rgba(255, 255, 255, 0.1);
+  color: white;
 
 }
 
